--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,11 @@ android {
     }
 }
 
+repositories {
+    maven { url 'https://oss.sonatype.org/content/repositories/ksoap2-android-releases/' }
+}
+
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -34,6 +39,7 @@ dependencies {
     implementation fileTree(include: ['*.aar', '*.jar'], exclude: [], dir: 'lib')
     compile 'javax.jws:javax.jws-api:1.1'
     compile 'javax.xml.bind:jaxb-api:2.2.4'
+    compile 'com.google.code.ksoap2-android:ksoap2-android:3.6.1'
     //    implementation files('D:/android/DemoApplication/lib/jaxws-api-2.3.1.jar')
-    implementation files('D:/android/DemoApplication/lib/ksoap2-android-assembly-3.5.0-jar-with-dependencies.jar')
+    //implementation files('D:/android/DemoApplication/lib/ksoap2-android-assembly-3.5.0-jar-with-dependencies.jar')
 }
